--- a/CSS/nutxo.css
+++ b/CSS/nutxo.css
@@ -125,7 +125,7 @@
         .btn {
             display: inline-block;
             background-color: #4CAF50;
-            color: black;
+            color: white;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
